https://trello.com/c/s7xdTBGz/494-ui-header: Ensure height of collapsed menu aligned with LHS.

--- a/ckanext/bpatheme/fanstatic/styles/bpatheme.css
+++ b/ckanext/bpatheme/fanstatic/styles/bpatheme.css
@@ -510,6 +510,7 @@ body {
   width: 100%;
   height: 100%;
   margin-right: 15px;
+  position: relative;
 }
 
 
@@ -535,6 +536,7 @@ body {
 @media screen and (max-width: 990px) {
   .site-title .topnav {
     flex-direction: column;
+    padding-bottom: 0px;
   }
 }
 
